# NRC-landmark

./: CMakeLists.txt  package.xml
gazebo models/barrier_w_reflector/: model.config  model.sdf
gazebo models/circular_reflector/: model.config  model.sdf
gazebo models/rectangle_reflector/: model.config  model.sdf
gazebo models/reflector_tape/: model.config  model.sdf
gazebo models/square_reflector/: model.config  model.sdf
launch/: landmark_detection_circle.launch.py  landmark_detection_line_corner.launch.py
map/: test.pgm  test.yaml
rosbag/nrc_real/: metadata.yaml
rosbag/simulation_nrc_1/: metadata.yaml
src/: landmark_detection_line.cpp  landmark_detection_line_corner.cpp  lanmark_localizer.cpp
world file/: nrc.world  nrc_2.world  nrc_tape.world
