<?xml version="1.0"?>
<package format="3">
  <name>landmark_detection</name>
  <version>0.1.0</version>
  <description>ROS2 node for detecting circular LIDAR reflectors</description>
  <maintainer email="nguyenvinhnghi.1234@gmail.com">Nghi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>